# datastructure_and_algorithms

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/algorithmic_toolbox/: CMakeLists.txt
src/algorithmic_toolbox/week_1/: CMakeLists.txt  max_pairwise_product.cpp  max_pairwise_product.hpp
src/algorithmic_toolbox/week_1/test/: CMakeLists.txt  tests.cpp
